--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -2,17 +2,19 @@
   <div class="inner">
     <div class="prototype__wrapper">
       <p class="prototype__hedding">
-        <%# ??? %>
+        <% "#{@prototype.title}" %>
       </p>
-      <%= link_to "by #{@prototype.user.name}さん", root_path, class: :prototype__user %>
+      <%= link_to "by #{@prototype.user.name}さん", user_path(@prototype.user.id), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
       <% if user_signed_in? && current_user.id == @prototype.user_id%>
           <div class="prototype__manage">
             <%= link_to "編集する", edit_prototype_path(@prototype.id), class: :prototype__btn %>
             <%= link_to "削除する", prototype_path(@prototype.id),method: :delete, class: :prototype__btn %>
           </div>
+      <% end %>
         <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
-        <div class="prototype__image">
+      <%# <% if user_signed_in? && @prototype.user_id == current_user.id %> 
+        <div class="prototype__image"> 
           <%= image_tag @prototype.image %>
         </div>
         <div class="prototype__body">
@@ -31,7 +33,7 @@
         </div>
         <div class="prototype__comments">
           <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
-          <% if user_signed_in? && current_user.id == @prototype.user_id%>
+          <% if user_signed_in? %>
               <%= form_with(model:[@prototype,@comment], local: true) do |f| %>
                 <div class="field">
                   <%= f.label :text, "コメント" %><br />
@@ -61,7 +63,7 @@
             </div>
           <% end %>
         </div>
-      <% end %>  
+       
     </div>
   </div>
 </main>
