--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,30 +2,30 @@
   <div class="inner">
     <div class="user__wrapper">
       <h2 class="page-heading">
-        <%= "ユーザー名さんの情報"%>
+        <%= "#{@user_name}さんの情報"%>
       </h2>
       <table class="table">
         <tbody>
           <tr>
             <th class="table__col1">名前</th>
-            <td class="table__col2"><%= "#{current_user.name}さん" %></td>
+            <td class="table__col2"><%= "#{@user_name}さん" %></td>
           </tr>
           <tr>
             <th class="table__col1">プロフィール</th>
-            <td class="table__col2"><%= "#{current_user.profile}" %></td>
+            <td class="table__col2"><%= "#{@profile}" %></td>
           </tr>
           <tr>
             <th class="table__col1">所属</th>
-            <td class="table__col2"><%= "#{current_user.occupation}" %></td>
+            <td class="table__col2"><%= "#{@occupation}" %></td>
           </tr>
           <tr>
             <th class="table__col1">役職</th>
-            <td class="table__col2"><%= "#{current_user.position}" %></td>
+            <td class="table__col2"><%= "#{@position}" %></td>
           </tr>
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= "#{current_user.name}さんのプロトタイプ"%>
+        <%= "#{@user_name}さんのプロトタイプ"%>
       </h2>
       <div class="user__card">
         <%# 部分テンプレートでそのユーザーが投稿したプロトタイプ投稿一覧を表示する %>
