--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,6 +29,10 @@
       </h2>
       <div class="user__card">
         <%# 部分テンプレートでそのユーザーが投稿したプロトタイプ投稿一覧を表示する %>
+          <%# <% @prototypes.each do |prototype| %>
+            <%# <%= render partial: "prototype", locals: { prototype: prototype } %>
+          <%# <% end %>  
+          <%= render partial:"prototypes/prototype" ,collection:@prototypes%>
       </div>
     </div>
   </div>
