--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -10,10 +10,11 @@
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
-      <% @prototypes.each do |prototype| %>
-        <%= render partial: "prototype", locals: { prototype: prototype } %>
-      <% end %> 
       <%= render partial:"prototypes/prototype" ,collection:@prototypes%>
+      <%# <% @prototypes.each do |prototype| %>
+        <%# <%= render partial: "prototype", locals: { prototype: prototype }%> 
+       <%# <% end  %>  
+      <%# <%= render partial:"prototypes/prototype" ,collection:@prototypes%> 
     </div>
   </div>
 </main>
